# CLIRuntime

./: .gitignore  CMakeLists.txt  README.md
lib/daemonpp/: daemon.hpp
src/: command_utils.cpp  command_utils.hpp  defines.hpp  main.cpp  udp.cpp  udp.hpp
tests/: CMakeLists.txt  test_comutils.cpp  test_udp.cpp
